--- a/app/src/main/res/layout/layout_center_profile.xml
+++ b/app/src/main/res/layout/layout_center_profile.xml
@@ -50,6 +50,7 @@
                 </RelativeLayout>
 
 
+
             </LinearLayout>
 
             <LinearLayout
@@ -91,16 +92,16 @@
                         android:id="@+id/zhihu"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
+                        android:layout_below="@id/address"
                         android:layout_marginLeft="5dp"
                         android:layout_marginTop="8dp"
                         android:layout_marginRight="5dp"
+                        android:layout_weight="1"
                         android:minHeight="56dp"
                         android:text="프로필 사진 설정"
-                        android:layout_weight="1"
                         android:textAllCaps="false"
                         android:textColor="@android:color/white"
-                        android:theme="@style/ZhihuOverlay"
-                        android:layout_below="@id/address"/>
+                        android:theme="@style/ZhihuOverlay" />
 
                     <Button
                         android:id="@+id/deletePic"
@@ -139,6 +140,18 @@
                     android:paddingBottom="16dp"/>
 
             </RelativeLayout>
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/PickDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:clickable="true"
+                app:backgroundTint="@color/colorSplash"
+                app:srcCompat="@drawable/ic_baseline_date_range_24" />
 
         </RelativeLayout>
 
