fix menu, profimg

--- a/app/src/main/res/layout/join_item.xml
+++ b/app/src/main/res/layout/join_item.xml
@@ -6,11 +6,10 @@
     android:orientation="horizontal"
 >
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/joinImg"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/whale"
-        android:scaleType="centerInside"/>
+        android:src="@drawable/whale"/>
 
 </LinearLayout>
