--- a/app/src/main/res/layout/snippet_top_profile.xml
+++ b/app/src/main/res/layout/snippet_top_profile.xml
@@ -39,6 +39,7 @@
             android:text="5"
             android:textColor="#000000"
             android:textSize="18sp"
+            android:clickable="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.647"
             app:layout_constraintStart_toEndOf="@+id/tvPosts"
