--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -1,14 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="10dp"
     tools:context=".JoinActivity">
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/highfive"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="함께 여행할 친구를 찾아주세요"
+        android:layout_marginVertical="20dp"
+        android:id="@+id/Join"
+        android:textSize="20sp"
+        android:gravity="center"
+        android:textStyle="bold"/>
+
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_centerInParent="true"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/circlegif"
+        android:visibility="invisible"/>
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/whale"
+        android:id="@+id/profimg"
+        android:layout_centerInParent="true"
+        android:background="@drawable/rounded"
+        android:layout_gravity="center_vertical"/>
+
+
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:gravity="center"
+        android:text="NAME"
+        android:layout_below="@id/profimg"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/friendname"
+        android:textSize="20sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="email"
+        android:layout_below="@+id/friendname"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/friendemail"
+        android:textSize="20sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/Join"
         android:orientation="horizontal"
         android:id="@+id/searchFriend"
         tools:ignore="MissingConstraints">
@@ -35,15 +96,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/selectedFriend"
-        app:layout_constraintTop_toBottomOf="@+id/searchFriend"
+        android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:id="@+id/selected"
-            android:layout_weight="4"
+            android:layout_weight="7"
             />
 
         <Button
@@ -52,56 +113,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="5dp"
+            android:textSize="10sp"
             android:text="여행 시작" />
 
 
     </LinearLayout>
 
-<!--    <ListView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/selectedFriend"-->
-<!--        />-->
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/friend"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        app:layout_constraintTop_toBottomOf="@+id/selectedFriend"
-        tools:ignore="MissingConstraints">
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/whale"
-            android:id="@+id/profimg"
-            android:layout_gravity="center_vertical"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:gravity="center"
-            android:text="About Me"
-            android:id="@+id/friendname"
-            android:textSize="20sp" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:text="About Me"
-            android:id="@+id/friendemail"
-            android:textSize="20sp" />
-
-
-
-
-    </androidx.cardview.widget.CardView>
 
 
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+
+
+</RelativeLayout>
