--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -4,18 +4,22 @@
     android:layout_height="56dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
-    android:paddingLeft="24dp"
-    android:paddingRight="24dp">
+    android:paddingLeft="40dp"
+    android:paddingRight="24dp"
+    android:layout_marginBottom="20dp">
 
     <ImageView
         android:layout_width="22dp"
         android:layout_height="22dp"
         android:id="@+id/icon"
-        tools:ignore="ContentDescription"/>
+        tools:ignore="ContentDescription"
+        android:scaleType="centerInside"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:id="@+id/title"
         android:layout_marginHorizontal="16dp"/>
 
