--- a/app/src/main/res/layout/join_item.xml
+++ b/app/src/main/res/layout/join_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
+    android:layout_margin="3dp"
 >
 
     <de.hdodenhof.circleimageview.CircleImageView
