--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -10,128 +10,153 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:elevation="4dp"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/text1"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentTop="true"
-            android:text='" '
-            android:textColor="@android:color/black"
-            android:textSize="19sp"
-            android:layout_toLeftOf="@id/title"/>
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentTop="true"
-            android:text="Title"
-            android:textColor="@android:color/black"
-            android:textSize="22sp"
-            android:layout_toLeftOf="@id/text2"/>
-
-        <TextView
-            android:id="@+id/text2"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:layout_marginTop="10dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginRight="@dimen/item_margin_horizontal"
-            android:text=' "'
-            android:textColor="@android:color/black"
-            android:textSize="19sp"
-            android:layout_alignParentRight="true"/>
-
-        <TextView
-            android:id="@+id/region"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="@dimen/item_margin_horizontal"
-            android:text="region"
-            android:textColor="@android:color/black"
-            android:layout_marginTop="-20dp"
-            android:textSize="20sp"
-            android:layout_below="@id/title"
-            android:layout_toLeftOf="@id/address"/>
-
-        <TextView
-            android:id="@+id/address"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="10dp"
-            android:text="address"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:layout_marginTop="-20dp"
-            android:layout_below="@id/title"
-            android:layout_toLeftOf="@id/text4"/>
-
-        <TextView
-            android:id="@+id/text4"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:gravity="center_vertical"
-            android:text="에서의 추억"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:layout_marginTop="-20dp"
-            android:layout_below="@id/title"
-            android:layout_marginRight="@dimen/item_margin_horizontal"
-            android:layout_alignParentRight="true"/>
-
-        <Button
-            android:id="@+id/zhihu"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/item_margin_horizontal"
-            android:layout_marginTop="8dp"
-            android:layout_marginRight="@dimen/item_margin_horizontal"
-            android:minHeight="56dp"
-            android:text="사진 추가"
-            android:textAllCaps="false"
-            android:textColor="@android:color/white"
-            android:theme="@style/ZhihuOverlay"
-            android:layout_below="@id/address"/>
-
-    </RelativeLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/rounded"
+        android:layout_marginTop="30dp"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
         android:background="@color/white"
-        android:clipChildren="false"
-        android:clipToPadding="false"
-        android:paddingTop="16dp"
-        android:paddingBottom="16dp">
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
-<!--        <TextView-->
-<!--            android:id="@+id/empty_view"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:gravity="center"-->
-<!--            android:visibility="gone"-->
-<!--            android:text="이미지가 없습니다." />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_marginTop="40dp">
 
-    </androidx.recyclerview.widget.RecyclerView>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:elevation="4dp"
+            android:orientation="vertical">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/text1"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentTop="true"
+                android:text='" '
+                android:textColor="@android:color/black"
+                android:textSize="19sp"
+                android:layout_toLeftOf="@id/title"/>
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentTop="true"
+                android:text="Title"
+                android:textColor="@android:color/black"
+                android:textSize="22sp"
+                android:layout_toLeftOf="@id/text2"/>
+
+            <TextView
+                android:id="@+id/text2"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:layout_marginTop="10dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginRight="@dimen/item_margin_horizontal"
+                android:text=' "'
+                android:textColor="@android:color/black"
+                android:textSize="19sp"
+                android:layout_alignParentRight="true"/>
+
+            <TextView
+                android:id="@+id/region"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="@dimen/item_margin_horizontal"
+                android:text="region"
+                android:textColor="@android:color/black"
+                android:layout_marginTop="-20dp"
+                android:textSize="20sp"
+                android:layout_below="@id/title"
+                android:layout_toLeftOf="@id/address"/>
+
+            <TextView
+                android:id="@+id/address"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:paddingLeft="10dp"
+                android:text="address"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="-20dp"
+                android:layout_below="@id/title"
+                android:layout_toLeftOf="@id/text4"/>
+
+            <TextView
+                android:id="@+id/text4"
+                android:layout_width="wrap_content"
+                android:layout_height="56dp"
+                android:gravity="center_vertical"
+                android:text="에서의 추억"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:layout_marginTop="-20dp"
+                android:layout_below="@id/title"
+                android:layout_marginRight="@dimen/item_margin_horizontal"
+                android:layout_alignParentRight="true"/>
+
+            <Button
+                android:id="@+id/zhihu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/item_margin_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="@dimen/item_margin_horizontal"
+                android:minHeight="56dp"
+                android:text="사진 추가"
+                android:textAllCaps="false"
+                android:textColor="@android:color/white"
+                android:theme="@style/ZhihuOverlay"
+                android:layout_below="@id/address"/>
+
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white"
+            android:clipChildren="false"
+            android:clipToPadding="false"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp">
+
+            <!--        <TextView-->
+            <!--            android:id="@+id/empty_view"-->
+            <!--            android:layout_width="match_parent"-->
+            <!--            android:layout_height="match_parent"-->
+            <!--            android:gravity="center"-->
+            <!--            android:visibility="gone"-->
+            <!--            android:text="이미지가 없습니다." />-->
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
