--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -6,7 +6,8 @@
     android:orientation="horizontal"
     android:paddingLeft="40dp"
     android:paddingRight="24dp"
-    android:layout_marginBottom="20dp">
+    android:gravity="center_vertical"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:layout_width="22dp"
