--- a/app/src/main/res/layout/activity_front_input.xml
+++ b/app/src/main/res/layout/activity_front_input.xml
@@ -37,7 +37,8 @@
             android:textStyle="bold"
             android:text="ㅡ"
             android:layout_marginLeft="25dp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimaryDark"/>
 
         <TextView
             android:id="@+id/textView_num"
@@ -52,6 +53,7 @@
             android:layout_height="40dp"
             android:textStyle="bold"
             android:textColor="@color/white"
+            android:backgroundTint="@color/colorPrimaryDark"
             android:text="+" />
 
 
@@ -66,6 +68,7 @@
         android:text="여행 시작"
         android:layout_marginTop="10dp"
         android:layout_gravity="center_horizontal"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:layout_marginBottom="20dp"
         />
 
