--- a/app/src/main/res/layout/signup_dialog.xml
+++ b/app/src/main/res/layout/signup_dialog.xml
@@ -57,17 +57,18 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
-        app:cardBackgroundColor="@color/colorPrimary"
+        app:cardBackgroundColor="@color/black"
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="10dp">
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@color/colorPrimary"
+            android:backgroundTint="@color/quantum_greyblack1000"
             android:text="Sign up"
             android:id="@+id/bt_finalsavepath"
             android:textStyle="bold"/>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
