--- a/app/src/main/res/layout/activity_join_calendar.xml
+++ b/app/src/main/res/layout/activity_join_calendar.xml
@@ -29,5 +29,14 @@
         android:layout_marginTop="56dp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/sendTravelDays"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="날짜 저장"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/join_calendar" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
