--- a/app/src/main/res/layout/userpath_item.xml
+++ b/app/src/main/res/layout/userpath_item.xml
@@ -13,12 +13,6 @@
         android:layout_marginVertical="5dp"
         android:layout_marginHorizontal="5dp">
 
-<!--        <ImageView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="200dp"-->
-<!--            android:id="@+id/pathImg"-->
-<!--            android:src="@drawable/whale2"-->
-<!--            />-->
         <com.gjiazhe.panoramaimageview.PanoramaImageView
             android:id="@+id/pathImg"
             android:layout_width="match_parent"
@@ -29,30 +23,48 @@
             app:piv_show_scrollbar="true"
             app:piv_invertScrollDirection="false" />
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="110dp"
-            android:gravity="center"
-            android:layout_gravity="center_horizontal"
-            >
+            android:layout_gravity="center|bottom"
+            android:layout_marginBottom="20dp"
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/pathTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center"
+                android:gravity="center"
+                android:text="여행명"
+                android:layout_marginBottom="5dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/period"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal|center"
+                android:gravity="center"
+                android:textColor="@color/black"
+                android:textSize="15sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/pathTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal|center"
-            android:layout_weight="4"
-            android:gravity="center"
-            android:text="여행명"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+<!--        <ImageView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:id="@+id/pathImg"-->
+<!--            android:src="@drawable/whale2"-->
+<!--            />-->
+
+
+
+
+
+
 
     </androidx.cardview.widget.CardView>
 
