--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,7 +46,7 @@
             android:layout_height="40dp"
             android:layout_marginBottom="11dp"
             android:layout_marginHorizontal="3dp"
-            android:hint="이메일"
+            android:hint="아이디"
             android:ems="20"
             android:inputType="textEmailAddress"
             android:background="@drawable/custom_input"
