--- a/app/src/main/res/layout/signup_dialog.xml
+++ b/app/src/main/res/layout/signup_dialog.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_margin="8dp"
-        android:hint="Enter email"
+        android:hint="Enter id"
         android:ems="20"
         android:inputType="textEmailAddress"
         android:background="@drawable/custom_input"
